Fix image height when height property is added (#277) (#57)
* Fix image height when height property is added (#277)

In this case height: auto is needed from css otherwise the image will
have a distorted aspect ratio.

* Introduce an intercept to wait for the save and content to happen before edit again.

* Fix image height when height property is added (#277)

A second rule where height:auto would also be needed when an image
with a height property optimization is provided.

--- a/src/theme/styles.less
+++ b/src/theme/styles.less
@@ -214,6 +214,7 @@
 
     img {
       max-width: 300px;
+      height: auto;
       align-self: center;
     }
   }
@@ -228,6 +229,7 @@
 
     img {
       max-width: 100%;
+      height: auto;
     }
   }
 }
